--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ homepage = "https://github.com/breischl/advent_2021"
 [dependencies]
 "sliding_windows" = "3.0.0"
 "itertools" = "0.10"
+"log" = "0.4.14"
+"env_logger" = "0.9.0"
 #"clap" = "3.*"
 "clap" = {git = "https://github.com/clap-rs/clap", features=["derive"]}
